fix: overflow of slogan in header on small devices

--- a/client/src/app/dashboard/dashboard.component.scss
+++ b/client/src/app/dashboard/dashboard.component.scss
@@ -3,7 +3,13 @@
   h1 {
     font-family: $font-title-carousel-card
   }
+  @media only screen and (max-width:500px) {
+    p.lead {
+      font-size: 1rem;
+    }
+  }
 }
+
 
 .card-body {
   .card-title {
